# Vinculum-hs

./: .gitignore  Cargo.toml  README.md
build_scripts/: main.rs
build_scripts/codegen/: dispatch.rs
build_scripts/config/: parser.rs  types.rs
crates/vinculum/: Cargo.toml  build.rs
crates/vinculum-hs/: Cargo.toml  build.rs
crates/vinculum-hs-macros/src/: lib.rs
crates/vinculum-hs/build_scripts/: mod.rs  utils.rs
crates/vinculum-hs/build_scripts/codegen/: dispatch.rs  functions.rs
crates/vinculum-hs/build_scripts/ffi/lib/: Codec.hs
crates/vinculum-hs/build_scripts/haskell/: Codec.hs
crates/vinculum-hs/build_scripts/parser/: args.rs  errors.rs  functions.rs  mod.rs  parse.rs  types.rs  utils.rs  validator.rs
crates/vinculum-hs/build_scripts/utils/: config.rs  errors.rs  helpers.rs  mod.rs
crates/vinculum-hs/haskell_fallback/: haskell.cabal
crates/vinculum-hs/src/: lib.rs
crates/vinculum-hs/src/build_scripts/: mod.rs
crates/vinculum-hs/src/build_scripts/codegen/: dispatch.rs  functions.rs
crates/vinculum-hs/src/build_scripts/utils/: helpers.rs
crates/vinculum-hs/src/ffi/: bindings.rs  call.rs  codec.rs  errors.rs  mod.rs  value.rs
crates/vinculum-macros/: Cargo.toml
crates/vinculum-macros/src/: lib.rs
crates/vinculum/build_scripts/: mod.rs  utils.rs
crates/vinculum/build_scripts/codegen/: dispatch.rs  functions.rs
crates/vinculum/build_scripts/config/: parser.rs  types.rs
crates/vinculum/build_scripts/haskell/: Codec.hs
crates/vinculum/build_scripts/parser/: errors.rs  mod.rs  parse.rs  types.rs  validator.rs
crates/vinculum/src/: functions.rs  lib.rs  runtime.rs
crates/vinculum/src/ffi/: call.rs  codec.rs  errors.rs  mod.rs  value.rs
examples/: Cargo.toml  build.rs  math.rs  tools.rs
examples/add/: Math.hs  Script.hs  haskell_exports.toml  main.rs
examples/haskell/: Math.hs  Tools.hs  haskell.cabal
examples/haskell/app/exports/: Math.hs
examples/src/: functions.rs  main.rs
haskell/: vinculum.cabal
rust/: Cargo.toml
