cabal-version:      3.0
name:               haskell
version:            0.1.0.0
license:            BSD-3-Clause
author:             enzoblain
maintainer:         enzoblain@proton.me
build-type:         Simple

common warnings
    ghc-options:      -Wall

executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

foreign-library lib
    type:             native-shared
    hs-source-dirs:   app, app/exports, app/exports/vinculum, app/exports/vinculum/generated
    other-modules:
        Codec
        Runtime
        Dispatch
        UserFunctions
        Math
    c-sources:
        app/exports/vinculum/StubbsRTS.c
    build-depends:
        base ^>=4.18.3.0,
        bytestring
    default-language: Haskell2010
    if os(windows)
        options:      standalone